<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Grammar.Report">


    <ScrollView
        android:id="@+id/scrollView7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView130"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/baloo"
                android:text="@string/reported_speech"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/textColour"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView131"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/when_do_we_use_reported_speech"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView132"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/sometimes_someone_says_a_sentence_for_example_i_m_going_to_the_cinema_tonight_later_maybe_we_want_to_tell_someone_else_what_the_first_person_said"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView133"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/for_example_i_m_going_to_the_cinema_tonight"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView134"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/later_maybe_we_want_to_tell_someone_else_what"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView135"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/the_first_person_said"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:text="@string/eg"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/direct_speech_i_like_ice_cream"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/reported_speech_she_says_that_she_likes_ice_cream"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <com.ortiz.touchview.TouchImageView
                android:id="@+id/imageView40"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"

                android:src="@drawable/repotone" />

            <com.ortiz.touchview.TouchImageView
                android:id="@+id/imageView41"
                android:layout_width="match_parent"
                android:layout_height="530dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/reporttwo" />


        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_reported"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3532725936688615/3230526705"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>